added non working camera and logic for failing connection issues

--- a/src/rtsp/main/index.html
+++ b/src/rtsp/main/index.html
@@ -47,10 +47,14 @@
 					<fieldset>
 					<label>Camera
 					<select id="camera">
-						<option value="rtsp://root:60056006@10.86.8.16:606/axis-media/media.amp"> US Camera Lab </option>
-						<option value="rtsp://root:60056006@10.86.8.16:559/axis-media/media.amp"> US Camera Garden </option> 
-						<option value="rtsp://localhost:8554/testStream"> Arvind Cam1 </option>
-						<option value="rtsp://localhost:9554/testStream"> Arvind Cam2 </option> 
+				 			<option value="rtsp://root:60056006@10.86.8.16:606/axis-media/media.amp"> US Camera Lab </option>
+                            <option value="rtsp://root:60056006@10.86.8.16:560/axis-media/media.amp?videocodec=h264&resolution=768x576&fps=25"> US Camera Garden </option>
+                            <option value="rtsp://root:60056005@10.86.14.104:559/axis-media/media.amp?videocodec=h264&resolution=768x576&fps=25"> Axis-559 </option>
+                            <option value="rtsp://root:60056005@10.86.14.104:560/axis-media/media.amp?videocodec=h264&resolution=768x576&fps=25"> Axis-560 </option>
+                            <option value="rtsp://admin:247Supp0rt!@10.86.7.224:557/RTSP2HLS/media.smp"> Hanwha </option>
+
+	<!-- 					<option value="rtsp://localhost:8554/testStream"> Arvind Cam1 </option>
+						<option value="rtsp://localhost:9554/testStream"> Arvind Cam2 </option>  -->
 					</select>
 					</label>
 					</fieldset>
@@ -87,29 +91,27 @@
                         <div class="tgl-slider"></div>
                     </label>
                 </div>
-                <div id="muteaudiodiv">
+<!--                 <div id="muteaudiodiv">
                     <div class="settings-text">Mute Audio</div>
                     <label class="tgl-switch">
                         <input type="checkbox" id="muteaudio" onclick="muteit()">
                         <div class="tgl-slider"></div>
                     </label>
 
-                </div>
-                <div id="dControlKeyboard">
+                </div> -->
+              <!--   <div id="dControlKeyboard">
                     <div class="settings-text">Control Keyboard and Mouse</div>
                     <label class="tgl-switch">
                          <input type="checkbox" id="ControlKeyboard">
                         <div class="tgl-slider"></div>
                     </label>
-                </div>
-<!-- 				<div id="statsSetting"> 
+                </div> -->
+				<div id="statsSetting"> 
 					<div class="settings-text">Show Stats</div>
-					<label class="tgl-switch">
-						<input type="checkbox" id="show-stats-tgl" class="tgl tgl-flat" checked>
-						<div class="tgl-slider"></div>
-					</label>
-					
-				</div> -->
+					<fieldset>
+					<p style="color:red;" id="parStats">Change the camera, if not available</p>
+					</fieldset>
+				</div>
 			</div>
 		</div>
 	</div>
