backported from Rtsp

--- a/src/fmp4/main/index.html
+++ b/src/fmp4/main/index.html
@@ -93,21 +93,19 @@
                     </label>
 
                 </div>
-                <div id="dControlKeyboard">
+              <!--   <div id="dControlKeyboard">
                     <div class="settings-text">Control Keyboard and Mouse</div>
                     <label class="tgl-switch">
                          <input type="checkbox" id="ControlKeyboard">
                         <div class="tgl-slider"></div>
                     </label>
-                </div>
-<!-- 				<div id="statsSetting"> 
+                </div> -->
+				<div id="statsSetting"> 
 					<div class="settings-text">Show Stats</div>
-					<label class="tgl-switch">
-						<input type="checkbox" id="show-stats-tgl" class="tgl tgl-flat" checked>
-						<div class="tgl-slider"></div>
-					</label>
-					
-				</div> -->
+					<fieldset>
+					<p style="color:red;" id="parStats">Change the camera, if not available</p>
+					</fieldset>
+				</div>
 			</div>
 		</div>
 	</div>
