--- a/src/broadcast/signalserver/codelab/index.html
+++ b/src/broadcast/signalserver/codelab/index.html
@@ -28,7 +28,7 @@
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <strong>Live Streaming from DummyCamera!</strong> Camera video feed for webrtcstreamer</code>
+        <strong>Live Streaming from Live Camera!</strong> Camera video feed for webrtcstreamer</code>
       </div>
 
       <div class="row">
