--- a/src/broadcast/signalserver/codelab/provigil.html
+++ b/src/broadcast/signalserver/codelab/provigil.html
@@ -133,7 +133,7 @@ function hide() {
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-<script src="/js/main.js"></script>
+<script src="/js/main_provigil.js"></script>
      
 </body>
 </html>
