--- a/src/broadcast/signalserver/codelab/index.html
+++ b/src/broadcast/signalserver/codelab/index.html
@@ -37,6 +37,12 @@
       <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
       <script src="js/jquery-spinner.min.js"></script>
       <script src="js/main.js"></script>
+      <script>
+        if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+            var myobj = document.getElementById("controls");
+            myobj.remove();
+          }
+      </script>
       
   </body>
 </html>
